grafana/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    istio.io/rev: canary
