grafana/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
      containers:
        - name: grafana
          image: grafana/grafana:7.0.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: var-lib
              mountPath: /var/lib/grafana
          resources:
            requests:
              cpu: 500m
              memory: 300Mi
      volumes:
        - name: var-lib
          persistentVolumeClaim:
            claimName: grafana
